--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,10 +30,8 @@ test.phpstan:
   tags: [grifart/php7.1-with-gulp-and-all-php-modules]
 
   dependencies: [build.composer]
-  before_script:
-    - composer global require phpstan/phpstan-shim
   script:
-    - phpstan.phar analyze --ansi --no-progress --no-interaction --level 7 src tests
+    - vendor/bin/phpstan analyze --ansi --no-progress --no-interaction --level 8 src tests
 
 
 test.linter:
