--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
 		"php-ds/php-ds": "^1.1"
 	},
 	"require-dev": {
-		"nette/tester": "^2.0.0"
+		"nette/tester": "^2.0.0",
+		"phpstan/phpstan": "^0.12.0"
 	},
 	"repositories": [
 		{
